frontend <> fixed visibilty css

--- a/frontend/src/app/component/profileMiddle/page.css
+++ b/frontend/src/app/component/profileMiddle/page.css
@@ -10,7 +10,8 @@
 }
 
 .profile-middle-title p {
-  font-size: 1.75rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .profile-middle-stories {
@@ -49,9 +50,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 1rem;
-  font-size: 1rem;
-  width: 4.5rem;
+  border-radius: 1.5rem !important;
+  font-size: 1rem !important;
+  padding: 0.5rem !important;
 }
 
 .star-styling {
@@ -73,7 +74,7 @@
   align-items: center;
   gap: 0.5rem;
   background-color: #0e0f32;
-  width: 50%;
+  min-width: 50%;
   padding: 2rem;
   border-radius: 0.5rem;
   margin: 1rem;
